sugar/tests/fail/shadowing.mx
t : 1 + 1, a : _|_ |- case t of
{ inl a -> let () = a in a
; inr b -> let () = b in a
}
